konst/tests/misc_tests/slice_ui_tests/slice_functions_type_err.stderr
error[E0277]: the trait bound `NonCopy: Copy` is not satisfied
 --> tests/misc_tests/slice_ui_tests/slice_functions_type_err.rs:8:5
  |
8 |     slice::fill(&mut arr, NonCopy);
  |     ^^^^^^^^^^^ the trait `Copy` is not implemented for `NonCopy`
  |
note: required by a bound in `fill`
 --> src/slice/slice_filler.rs
  |
  | pub const fn fill<T: Copy>(slice: &mut [T], val: T) {
  |                      ^^^^ required by this bound in `fill`
help: consider annotating `NonCopy` with `#[derive(Copy)]`
  |
 3 + #[derive(Copy)]
 4 | struct NonCopy;
   |
